# 0g-poly-skill

./: .gitignore  README.md  SKILL.md  _meta.json  config.json  pyproject.toml
models/: btc-15min.metrics.json  btc-15min.pt  eth-15min.metrics.json  eth-15min.pt
references/: automation_reporting.md  database_inspection.md  report_payloads.md  runtime_contract.md  troubleshooting.md
scripts/: __init__.py  check_polymarket_order.sh  config.json  fastloop_trader.py  polymarket_fast_market.py  polymarket_features.py  quant_model.py
