[project]
name = "polymarket-fast-market"
version = "0.1.0"
description = "Polymarket fast-market trader with paper and live modes"
requires-python = ">=3.10,<=3.13"
authors = [
    { name = "William", email = "william.wu@0g.ai" }
]
dependencies = [
    "py-clob-client>=0.34.6",
    "python-dotenv>=1.0.1",
    "httpx[socks]",
    "torch>=2.2",
]
[project.scripts]
polymarket-fast-market = "scripts.polymarket_fast_market:main"
