[project]
name = "polymarket-fast-market"
version = "0.1.0"
description = "Polymarket fast-market trader with paper and live modes"
requires-python = ">=3.10,<=3.13"
authors = [
    { name = "William", email = "william.wu@0g.ai" }
]
dependencies = [
    "py-clob-client>=0.34.6",
    "python-dotenv>=1.0.1",
    "httpx[socks]",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=16.0",
    "torch>=2.2",
    "websocket-client",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project.scripts]
polymarket-fast-market = "scripts.polymarket_fast_market:main"
